--- a/index.html
+++ b/index.html
@@ -1,59 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 <head>
-  <meta charset="UTF-8">
-  <title>シンプルカレンダー</title>
-  <style>
-    table { border-collapse: collapse; width: 100%; }
-    th, td { border: 1px solid #000; padding: 10px; text-align: center; }
-    th { background-color: #f0f0f0; }
-    td { height: 50px; }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Googleカレンダー風</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1 id="monthYear"></h1>
-  <table id="calendar">
-    <thead>
-      <tr>
-        <th>日</th><th>月</th><th>火</th><th>水</th><th>木</th><th>金</th><th>土</th>
-      </tr>
-    </thead>
-    <tbody id="calendarBody">
-      <!-- 日付はここに追加 -->
-    </tbody>
-  </table>
+  <header class="calendar-header">
+    <h1 id="month-year"></h1>
+    <div class="controls">
+      <button id="prev-month">◀</button>
+      <button id="today-btn">今日</button>
+      <button id="next-month">▶</button>
+    </div>
+  </header>
 
-  <script>
-    function createCalendar(year, month) {
-      const calendarBody = document.getElementById("calendarBody");
-      calendarBody.innerHTML = ""; // 既存をクリア
+  <main class="calendar">
+    <div class="calendar-days"></div>
+    <div id="event-modal" class="modal">
+      <div class="modal-content">
+        <h2 id="modal-date"></h2>
+        <textarea id="event-text" placeholder="予定を入力..."></textarea>
+        <div class="modal-buttons">
+          <button id="save-event">保存</button>
+          <button id="delete-event">削除</button>
+          <button id="close-modal">閉じる</button>
+        </div>
+      </div>
+    </div>
+  </main>
 
-      document.getElementById("monthYear").textContent = `${year}年 ${month+1}月`;
-
-      const firstDay = new Date(year, month, 1).getDay(); // 1日の曜日
-      const lastDate = new Date(year, month + 1, 0).getDate(); // 月末日
-
-      let date = 1;
-      for (let i = 0; i < 6; i++) { // 最大6行
-        const row = document.createElement("tr");
-        for (let j = 0; j < 7; j++) {
-          const cell = document.createElement("td");
-          if (i === 0 && j < firstDay) {
-            cell.textContent = "";
-          } else if (date > lastDate) {
-            cell.textContent = "";
-          } else {
-            cell.textContent = date;
-            date++;
-          }
-          row.appendChild(cell);
-        }
-        calendarBody.appendChild(row);
-      }
-    }
-
-    const today = new Date();
-    createCalendar(today.getFullYear(), today.getMonth());
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
