--- a/index.html
+++ b/index.html
@@ -1,42 +1,42 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Googleカレンダー風 拡張版</title>
-  <link rel="stylesheet" href="style.css" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Googleカレンダー風 完全版</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header class="calendar-header">
-    <h1 id="month-year"></h1>
-    <div class="controls">
-      <button id="prev">◀</button>
-      <button id="today-btn">今日</button>
-      <button id="next">▶</button>
-      <select id="view-select">
-        <option value="month">月</option>
-        <option value="week">週</option>
-        <option value="day">日</option>
-      </select>
-    </div>
-  </header>
+<header class="calendar-header">
+  <h1 id="month-year"></h1>
+  <div class="controls">
+    <button id="prev">◀</button>
+    <button id="today-btn">今日</button>
+    <button id="next">▶</button>
+    <select id="view-select">
+      <option value="month">月</option>
+      <option value="week">週</option>
+      <option value="day">日</option>
+    </select>
+  </div>
+</header>
 
-  <main class="calendar">
-    <div class="calendar-days"></div>
+<main class="calendar">
+  <div class="calendar-days"></div>
 
-    <div id="event-modal" class="modal">
-      <div class="modal-content">
-        <h2 id="modal-date"></h2>
-        <textarea id="event-text" placeholder="予定を入力..."></textarea>
-        <div class="modal-buttons">
-          <button id="save-event">追加</button>
-          <button id="close-modal">閉じる</button>
-        </div>
-        <div id="event-list"></div>
+  <div id="event-modal" class="modal">
+    <div class="modal-content">
+      <h2 id="modal-date"></h2>
+      <textarea id="event-text" placeholder="予定を入力..."></textarea>
+      <div class="modal-buttons">
+        <button id="save-event">追加</button>
+        <button id="close-modal">閉じる</button>
       </div>
+      <div id="event-list"></div>
     </div>
-  </main>
+  </div>
+</main>
 
-  <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
